# F12-Programacion-mio-

Examen_2/: Examen_2.ipynb
Tareas/: Tarea4.ipynb  Tarea5.ipynb
Tareas/tarea_1_Programación/: main.tex
practicas/cpp/: ordenamiento.cpp
practicas/python/analisis_datos/: pyproject.toml
practicas/python/analisis_datos/notebooks/: analisis_estrellas .ipynb  analisis_estrellas.ipynb
